Roadmap additions and minor changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Picnic</title>
+    <title>Picnic - Home</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -220,7 +220,7 @@
                             <div class="sectionSubImg"><img src="images/sec3.02.png" alt="..." /></div>
                             <h4 class="sectionSubHead">TRANSPARENCY</h4>
                             <p class="sectionSubDesc">You’ll know what condition the collective is in, with access to information like claim payout rates, satisfaction levels and member volumes.</p>
-                            <a href="" class="sectionMore">Read More</a>
+<!--                             <a href="" class="sectionMore">Read More</a> -->
                         </div>
                     </div>
 
@@ -229,13 +229,13 @@
                             <div class="sectionSubImg"><img src="images/sec3.03.png" alt="..." /></div>
                             <h4 class="sectionSubHead">SIMPLE & FAIR CLAIMS</h4>
                             <p class="sectionSubDesc">We fight against fine print and loopholes that complicate claims.  Our insurance is simple, with fewer exclusions and clearer coverage. Picnic’s peer-reviewed claims ensure that fairness prevails.</p>
-                            <a href="" class="sectionMore">Read More</a>
+<!--                             <a href="" class="sectionMore">Read More</a> -->
                         </div>
                         <div class="sectionSub">
                             <div class="sectionSubImg"><img src="images/sec3.05.png" alt="..." /></div>
                             <h4 class="sectionSubHead">EFFICIENCY</h4>
                             <p class="sectionSubDesc">Picnic is built as a lean, digital business so we operate more efficiently than a traditional insurer. Our lower premiums prove it.</p>
-                            <a href="" class="sectionMore">Read More</a>
+<!--                             <a href="" class="sectionMore">Read More</a> -->
                         </div>
 <!--                         <div class="sectionSub">
                             <div class="sectionSubImg"><img src="images/sec3.06.png" alt="..." /></div>
@@ -265,7 +265,7 @@
                 <h3 class="sectionHead dark">Fund a revolution with our Security Token Offer</h3>
                 <div class="section-4-content">
                     <h4 class="sectionSubHead">Share in the Picnic</h4>
-                    <p>Security Tokens are similar to preference shares in a company. The holder of a Security Token has ownership rights in Picnic. Among other things, they provide the owner a share of assets on liquidation, and early backers can trade them on the market when their value changes.</p>
+                    <p>Security Tokens are similar to preference shares in a company. The holder of a Security Token has ownership rights in Picnic Labs. Picnic Labs owns the technology that makes a Picnic mutual possible, licensing it and other IP to mutuals around the globe. As a Security Token holder, you'll receive a share of assets on any liquidation event, and backers can trade them on the market when their value changes.</p>
 
                     <p>By participating in the Picnic Security Token Offer, you're not just buying an asset that has the potential to add to your wealth - you're helping to transform the insurance industry and lowering the costs to protect your family and others around the world.</p>
                 </div>
