--- a/roadmap.html
+++ b/roadmap.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-
-    <title>Picnic</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <title>Picnic - Roadmap</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -77,10 +78,10 @@
                     <div class="sectionCount">
                         <b class="dark">01</b> <span>/<b>02</b></span>
                     </div>
-                    <ul class="carousel-indicators d-none d-md-block">
+<!--                     <ul class="carousel-indicators d-none d-md-block">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
                         <li data-target="#demo" data-slide-to="1"></li>
-                    </ul>
+                    </ul> -->
                 </div>
                 <div class="sectionContainRight">
                
@@ -88,16 +89,14 @@
                         <div class="carousel-item active">
                             <div class="sectioncarouselContent">
                                 <div class="sectioncarouselLeft">
-                                    <h3 class="sectionHead dark">What makes Picnic Different</h3>
+                                    <h3 class="sectionHead dark">Picnic Roadmap</h3>
                                 </div>
                                 <div class="sectioncarouselRight">
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                    <p>Picnic will unwind 400 years of corporatised insurance in a deeply regulated market. Here’s our roadmap to creating the world’s first fully-licensed decentralised insurance model.</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+<!--                         <div class="carousel-item">
                             <div class="sectioncarouselContent">
                                 <div class="sectioncarouselLeft">
                                     <h3 class="sectionHead dark">What makes Pi</h3>
@@ -108,7 +107,7 @@
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <ul class="carousel-indicators d-none d-sm-block d-md-none">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -137,42 +136,105 @@
         </div>
     </div>
 
-    <div class="roadmapTimeline-contents white ">
+    <div class="roadmapTimeline-contents white">
 
         <div class="roadmapTimelineSlide">
             <div class="roadmapTimelineDate">
-                <span>2018</span>
+                <span>2016</span>
+                <p>NOVEMBER</p>
+            </div>
+            <h3 class="roadmapTimelineHead">PICNIC FOUNDED</h3>
+            <p class="sectionSubDesc">A terrible claims experience in 2015, a lack of innovation in insurance and the opportunity to decentralise brought on by blockchain sparks an idea to reinvent full-stack insurance.</p>
+        </div>
+
+        <div class="roadmapTimelineSlide">
+            <div class="roadmapTimelineDate">
+                <span>2017</span>
+                <p>FEBRUARY</p>
+            </div>
+            <h3 class="roadmapTimelineHead">CUSTOMER PAIN VALIDATED</h3>
+            <p class="sectionSubDesc">Hypothesis confirmed and pain points documented with 1,000+ detailed surveys, 1-on-1 interviews and test marketing 20,000 Facebook users.</p>
+        </div>
+
+        <div class="roadmapTimelineSlide">
+            <div class="roadmapTimelineDate">
+                <span>2017</span>
                 <p>MARCH</p>
             </div>
-            <h3 class="roadmapTimelineHead">WHITELISTING COMMENCES</h3>
-            <p class="sectionSubDesc">Remaining profits are returned to you through lower premiums. Remaining profits are returned to you Remaining profits are returned to you through lower premiums. Remaining profits are returned to you through lower premiums. Remaining profits are returned to you through lower premiums. </p>
+            <h3 class="roadmapTimelineHead">REGULATORY FRAMEWORK DEVELOPED</h3>
+            <p class="sectionSubDesc">Legal and regulatory options paper commissioned, allowing development of a detailed licensing framework which meets customer and regulator expectations of a responsible insurer and lays the foundation for decentralised insurance.</p>
+        </div>
+
+        <div class="roadmapTimelineSlide">
+            <div class="roadmapTimelineDate">
+                <span>2017</span>
+                <p>JUNE</p>
+            </div>
+            <h3 class="roadmapTimelineHead">INSURANCE PRODUCTS DEVELOPED</h3>
+            <p class="sectionSubDesc">Simple, fair and transparent insurance policies are designed and developed, including underwriting methodologies and structures for home, motor and contents insurance products.</p>
+        </div>
+
+        <div class="roadmapTimelineSlide">
+            <div class="roadmapTimelineDate">
+                <span>2017</span>
+                <p>OCTOBER</p>
+            </div>
+            <h3 class="roadmapTimelineHead">UI PROTOTYPE TESTED</h3>
+            <p class="sectionSubDesc">Developed and tested non-functioning prototypes with potential investors and customers, resulting in a clear UI/UX path.</p>
+        </div>
+
+        <div class="roadmapTimelineSlide">
+            <div class="roadmapTimelineDate">
+                <span>2017</span>
+                <p>NOVEMBER</p>
+            </div>
+            <h3 class="roadmapTimelineHead">LICENCE APPLICATION COMMENCED</h3>
+            <p class="sectionSubDesc">Formal licence application process commenced for Australian GI insurance licence with informal discussions commenced for UK and the European Union.</p>
         </div>
 
         <div class="roadmapTimelineSlide">
             <div class="roadmapTimelineDate">
                 <span>2018</span>
-                <p>MARCH</p>
+                <p>JULY</p>
             </div>
-            <h3 class="roadmapTimelineHead">WHITELISTING COMMENCES</h3>
-            <p class="sectionSubDesc">Remaining profits are returned to you through lower premiums. Remaining profits are returned to you Remaining profits are returned to you through lower premiums. Remaining profits are returned to you through lower premiums. Remaining profits are returned to you through lower premiums. </p>
+            <h3 class="roadmapTimelineHead">SUPPORTER REGISTRATION COMMENCES</h3>
+            <p class="sectionSubDesc">Registration allows initial supporters to complete KYC, AML & institutional investor checks to register for the institutional offer.</p>
         </div>
 
         <div class="roadmapTimelineSlide">
             <div class="roadmapTimelineDate">
                 <span>2018</span>
-                <p>MARCH</p>
+                <p>Q4</p>
             </div>
-            <h3 class="roadmapTimelineHead">WHITELISTING COMMENCES</h3>
-            <p class="sectionSubDesc">Remaining profits are returned to you through lower premiums. Remaining profits are returned to you Remaining profits are returned to you through lower premiums. Remaining profits are returned to you through lower premiums. Remaining profits are returned to you through lower premiums. </p>
+            <h3 class="roadmapTimelineHead">AUSTRALIAN OPERATIONS TEAM MOBILISED</h3>
+            <p class="sectionSubDesc">Operations infrastructure mobilised and teams recruited, trained and readied for delivering an exceptional customer experience.</p>
         </div>
 
         <div class="roadmapTimelineSlide">
             <div class="roadmapTimelineDate">
                 <span>2018</span>
-                <p>MARCH</p>
+                <p>Q4</p>
             </div>
-            <h3 class="roadmapTimelineHead">WHITELISTING COMMENCES</h3>
-            <p class="sectionSubDesc">Remaining profits are returned to you through lower premiums. Remaining profits are returned to you Remaining profits are returned to you through lower premiums. Remaining profits are returned to you through lower premiums. Remaining profits are returned to you through lower premiums. </p>
+            <h3 class="roadmapTimelineHead">TECHNOLOGY COMPLETED & TESTED</h3>
+            <p class="sectionSubDesc">Picnic’s insurance policy administration and management systems developed, tested and deployed. This is the template for multiple international markets.</p>
+        </div>
+
+        <div class="roadmapTimelineSlide">
+            <div class="roadmapTimelineDate">
+                <span>2019</span>
+                <p>Q1</p>
+            </div>
+            <h3 class="roadmapTimelineHead">AUSTRALIA LICENSED & LAUNCHED</h3>
+            <p class="sectionSubDesc">Insurance mutual licence granted by the regulator to enable consumers around Australia will benefit from collective insurance with heart.</p>
+        </div>
+
+        <div class="roadmapTimelineSlide">
+            <div class="roadmapTimelineDate">
+                <span>2019</span>
+                <p>ONGOING</p>
+            </div>
+            <h3 class="roadmapTimelineHead">ROLLING & STAGGERED MARKET EXPANSION</h3>
+            <p class="sectionSubDesc">Picnic rolling launches will be based on the support received in the security token offer. Launches will be staggered to minimise pressure on operating markets and ensure continuity of superb customer experience.</p>
         </div>
 
     </div>
