--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
     <meta name="author" content="" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>Picnic</title>
+    <title>Picnic - Team</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
