Complete Responsive Updates

--- a/roadmap.html
+++ b/roadmap.html
@@ -31,7 +31,7 @@
         <!-- Header Nav -->
 
         <header>
-            <nav class="navbar navbar-expand-md ">
+            <nav class="navbar navbar-expand-md  bg-dark navbar-dark">
 
                 <a class="navbar-brand headerLogo" href="#"><img src="images/logo.png" alt="Header Logo" /></a>
 
@@ -109,10 +109,10 @@
                             </div>
                         </div> -->
                     </div>
-                    <ul class="carousel-indicators d-none d-sm-block d-md-none">
+                    <!-- <ul class="carousel-indicators d-none d-sm-block d-md-none">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
                         <li data-target="#demo" data-slide-to="1"></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
