--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
         <!-- Header Nav -->
 
         <header>
-            <nav class="navbar navbar-expand-md ">
+            <nav class="navbar navbar-expand-md  bg-dark navbar-dark">
 
                 <a class="navbar-brand headerLogo" href="./index.html"><img src="images/logo.svg" class="logo" alt="Header Logo" /></a>
 
@@ -111,10 +111,10 @@
                             </div>
                         </div> -->
                     </div>
-                    <ul class="carousel-indicators d-none d-sm-block d-md-none">
+                    <!-- <ul class="carousel-indicators d-none d-sm-block d-md-none">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
                         <li data-target="#demo" data-slide-to="1"></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Mark Arnold</h4>
-            <h4 class="section-5-slideTitle">Founder & Chair</h4>
+            <h4 class="section-5-slideTitle light">Founder & Chair</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -172,7 +172,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Charles Pollack</h4>
-            <h4 class="section-5-slideTitle">Chief Executive Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Executive Officer</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -192,7 +192,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">John Connnor</h4>
-            <h4 class="section-5-slideTitle">Chief Actuary</h4>
+            <h4 class="section-5-slideTitle light">Chief Actuary</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -212,7 +212,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Reece Frazier</h4>
-            <h4 class="section-5-slideTitle">Chief Experience Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Experience Officer</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -232,7 +232,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Martin Wells</h4>
-            <h4 class="section-5-slideTitle">Chief Technology Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Technology Officer</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -252,7 +252,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Cédric Waldburger</h4>
-            <h4 class="section-5-slideTitle">Advisor</h4>
+            <h4 class="section-5-slideTitle light">Advisor</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -272,7 +272,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Andy Cornish</h4>
-            <h4 class="section-5-slideTitle">Advisor</h4>
+            <h4 class="section-5-slideTitle light">Advisor</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -292,7 +292,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Shane Herft</h4>
-            <h4 class="section-5-slideTitle">UX & Design</h4>
+            <h4 class="section-5-slideTitle light">UX & Design</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -310,7 +310,7 @@
             <span></span>
         </div>
         <h4 class="section-5-slideName">Chris Overs</h4>
-        <h4 class="section-5-slideTitle">Legal & Compliance</h4>
+        <h4 class="section-5-slideTitle light">Legal & Compliance</h4>
 <!--         <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
         <div class="section-5-slideSocial">
             <ul>
