Saving changes before pull

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Header Nav -->
 
         <header>
-            <nav class="navbar navbar-expand-md ">
+            <nav class="navbar navbar-expand-md  bg-dark navbar-dark">
 
                 <a class="navbar-brand headerLogo" href="#"><img src="images/logo_white.svg" alt="Header Logo" class="logo" /></a>
 
@@ -141,28 +141,28 @@
                 <h3 class="sectionHead">How does Picnic work</h3>
                 <div class="section-2-content">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-6 col-lg-3">
                             <div class="sectionSub">
                                 <h2 class="sectionNum">01</h2>
                                 <h4 class="sectionSubHead">POOLED PREMIUMS</h4>
                                 <p class="sectionSubDesc">When you join the collective, your premium is added to a pool of funds drawn from all members.</p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-6 col-lg-3">
                             <div class="sectionSub">
                                 <h2 class="sectionNum">02</h2>
                                 <h4 class="sectionSubHead">COVER CLAIMS</h4>
                                 <p class="sectionSubDesc">The pool pays for claims and costs, with a small reserve secured.</p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-6 col-lg-3">
                             <div class="sectionSub">
                                 <h2 class="sectionNum">03</h2>
                                 <h4 class="sectionSubHead">HAVE YOUR SAY</h4>
                                 <p class="sectionSubDesc">As a member of the collective you can vote on paying ambiguous claims.</p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-6 col-lg-3">
                             <div class="sectionSub">
                                 <h2 class="sectionNum">04</h2>
                                 <h4 class="sectionSubHead">PROFITS RETURNED</h4>
@@ -304,7 +304,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Mark Arnold</h4>
-            <h4 class="section-5-slideTitle">Founder & Chair</h4>
+            <h4 class="section-5-slideTitle light">Founder & Chair</h4>
             <div class="section-5-slideSocial">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/markearnold/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
@@ -323,7 +323,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Charles Pollack</h4>
-            <h4 class="section-5-slideTitle">Chief Executive Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Executive Officer</h4>
             <div class="section-5-slideSocial">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/charles-pollack-b86555a/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
@@ -342,7 +342,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">John Connnor</h4>
-            <h4 class="section-5-slideTitle">Chief Actuary</h4>
+            <h4 class="section-5-slideTitle light">Chief Actuary</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -362,7 +362,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Reece Frazier</h4>
-            <h4 class="section-5-slideTitle">Chief Experience Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Experience Officer</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -382,7 +382,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Martin Wells</h4>
-            <h4 class="section-5-slideTitle">Chief Technology Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Technology Officer</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -402,7 +402,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Cédric Waldburger</h4>
-            <h4 class="section-5-slideTitle">Advisor</h4>
+            <h4 class="section-5-slideTitle light">Advisor</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -422,7 +422,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Andy Cornish</h4>
-            <h4 class="section-5-slideTitle">Advisor</h4>
+            <h4 class="section-5-slideTitle light">Advisor</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -442,7 +442,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Shane Herft</h4>
-            <h4 class="section-5-slideTitle">UX & Design</h4>
+            <h4 class="section-5-slideTitle light">UX & Design</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -460,7 +460,7 @@
             <span></span>
         </div>
         <h4 class="section-5-slideName">Chris Overs</h4>
-        <h4 class="section-5-slideTitle">Legal & Compliance</h4>
+        <h4 class="section-5-slideTitle light">Legal & Compliance</h4>
 <!--         <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
         <div class="section-5-slideSocial">
             <ul>
@@ -571,22 +571,72 @@
 
                 <h3 class="sectionHead white">Press news</h3>
                 <div class="section-7-content">
-                    <div class="section-7-contentLeft">
-                        <img src="images/Logos.png" alt="..." />
-                    </div>
-                    <div class="section-7-contentRight">
-                        <div class="sectionMediaContent">
-                            <p class="sectionMediaContent_desc sectionSubDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <div id="pressNews" class="carousel slide carousel-fade" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="section-7-slide">
+                                    <div class="section-7-contentLeft">
+                                        <ul class="section-7-slideIcons">
+                                            <li data-target="#pressNews" data-slide-to="0" class="active"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="1"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="2"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="3"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="4"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="5"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="6"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="7"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="8"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="section-7-contentRight">
+                                        <div class="sectionMediaContent">
+                                            <p class="sectionMediaContent_desc sectionSubDesc">text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-                            <h4 class="sectionMediaContent_author">NATACHA Medley</h4>
-                            <span class="sectionMediaContent_name">Bauer Media</span>
+                                            <h4 class="sectionMediaContent_author">NATACHA Medley</h4>
+                                            <span class="sectionMediaContent_name">Bauer Media</span>
+                                        </div>
+                                        <ul class="mediaSlidePagi">
+                                            <li data-target="#pressNews" data-slide-to="0" class="active"><a href=""></a></li>
+                                            <li data-target="#pressNews" data-slide-to="1"><a href=""></a></li>
+                                            <li data-target="#pressNews" data-slide-to="2"><a href=""></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="carousel-item">
+                                <div class="section-7-slide">
+                                    <div class="section-7-contentLeft">
+                                        <ul class="section-7-slideIcons">
+                                            <li data-target="#pressNews" data-slide-to="0"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="1" class="active"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="2"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="3"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="4"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="5"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="6"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="7"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                            <li data-target="#pressNews" data-slide-to="8"><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="section-7-contentRight">
+                                        <div class="sectionMediaContent">
+                                            <p class="sectionMediaContent_desc sectionSubDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+
+                                            <h4 class="sectionMediaContent_author">NATACHA Medley</h4>
+                                            <span class="sectionMediaContent_name">Badeuer Media</span>
+                                        </div>
+                                        <ul class="mediaSlidePagi">
+                                            <li data-target="#pressNews" data-slide-to="0" class="active"><a href=""></a></li>
+                                            <li data-target="#pressNews" data-slide-to="1"><a href=""></a></li>
+                                            <li data-target="#pressNews" data-slide-to="2"><a href=""></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
-                        <ul class="mediaSlidePagi">
-                            <li><a class="active" href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                        </ul>
+                        
                     </div>
                 </div>
             </div>
@@ -703,8 +753,8 @@
                         <div class="footSection">
                             <h4 class="footHead">Company</h4>
                             <ul>
-                                <li><a class="hover_ease_2" href="">Privacy Policy</a></li>
-                                <li><a class="hover_ease_2" href="">Terms of Use</a></li>
+                                <li><a class="hover_ease_2" target="_blank" href="./privacy-policy.html">Privacy Policy</a></li>
+                                <li><a class="hover_ease_2" target="_blank" href="./terms-of-use.html">Terms of Use</a></li>
                             </ul>
                         </div>
                     </div>
@@ -715,6 +765,7 @@
                                 <li><a class="hover_ease_2" href="https://twitter.com/PicnicInsurance" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                 <li><a class="hover_ease_2" href="https://www.facebook.com/PicnicInsurance/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                 <li><a class="hover_ease_2" href="https://medium.com/picnic-insurance" target="_blank"><i class="fa fa-medium"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
