--- a/roadmap.html
+++ b/roadmap.html
@@ -31,7 +31,7 @@
         <!-- Header Nav -->
 
         <header>
-            <nav class="navbar navbar-expand-md ">
+            <nav class="navbar navbar-expand-md  bg-dark navbar-dark">
 
                 <a class="navbar-brand headerLogo" href="#"><img src="images/logo.png" alt="Header Logo" /></a>
 
@@ -109,10 +109,10 @@
                             </div>
                         </div> -->
                     </div>
-                    <ul class="carousel-indicators d-none d-sm-block d-md-none">
+                    <!-- <ul class="carousel-indicators d-none d-sm-block d-md-none">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
                         <li data-target="#demo" data-slide-to="1"></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -251,7 +251,7 @@
             </div>
             <div class="sectionContainRight">
                 <div class="keepUpdated">
-                    <h3 class="sectionHead">Keep Updated</h3>
+                    <h3 class="sectionHead dark">Keep Updated</h3>
                     <form>
                         <div class="row">
                             <div class="col-md-8">
@@ -297,8 +297,8 @@
                         <div class="footSection">
                             <h4 class="footHead">Company</h4>
                             <ul>
-                                <li><a class="hover_ease_2" href="">Privacy Policy</a></li>
-                                <li><a class="hover_ease_2" href="">Terms of Use</a></li>
+                                <li><a class="hover_ease_2" target="_blank" href="./privacy-policy.html">Privacy Policy</a></li>
+                                <li><a class="hover_ease_2" target="_blank" href="./terms-of-use.html">Terms of Use</a></li>
                             </ul>
                         </div>
                     </div>
@@ -309,6 +309,7 @@
                                 <li><a class="hover_ease_2" href="https://twitter.com/PicnicInsurance" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                 <li><a class="hover_ease_2" href="https://www.facebook.com/PicnicInsurance/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                 <li><a class="hover_ease_2" href="https://medium.com/picnic-insurance" target="_blank"><i class="fa fa-medium"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
