--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
         <!-- Header Nav -->
 
         <header>
-            <nav class="navbar navbar-expand-md ">
+            <nav class="navbar navbar-expand-md  bg-dark navbar-dark">
 
                 <a class="navbar-brand headerLogo" href="./index.html"><img src="images/logo.svg" class="logo" alt="Header Logo" /></a>
 
@@ -111,10 +111,10 @@
                             </div>
                         </div> -->
                     </div>
-                    <ul class="carousel-indicators d-none d-sm-block d-md-none">
+                    <!-- <ul class="carousel-indicators d-none d-sm-block d-md-none">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
                         <li data-target="#demo" data-slide-to="1"></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Mark Arnold</h4>
-            <h4 class="section-5-slideTitle">Founder & Chair</h4>
+            <h4 class="section-5-slideTitle light">Founder & Chair</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -172,7 +172,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Charles Pollack</h4>
-            <h4 class="section-5-slideTitle">Chief Executive Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Executive Officer</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -192,7 +192,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">John Connnor</h4>
-            <h4 class="section-5-slideTitle">Chief Actuary</h4>
+            <h4 class="section-5-slideTitle light">Chief Actuary</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -212,7 +212,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Reece Frazier</h4>
-            <h4 class="section-5-slideTitle">Chief Experience Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Experience Officer</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -232,7 +232,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Martin Wells</h4>
-            <h4 class="section-5-slideTitle">Chief Technology Officer</h4>
+            <h4 class="section-5-slideTitle light">Chief Technology Officer</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -252,7 +252,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Cédric Waldburger</h4>
-            <h4 class="section-5-slideTitle">Advisor</h4>
+            <h4 class="section-5-slideTitle light">Advisor</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -272,7 +272,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Andy Cornish</h4>
-            <h4 class="section-5-slideTitle">Advisor</h4>
+            <h4 class="section-5-slideTitle light">Advisor</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -292,7 +292,7 @@
                 <span></span>
             </div>
             <h4 class="section-5-slideName">Shane Herft</h4>
-            <h4 class="section-5-slideTitle">UX & Design</h4>
+            <h4 class="section-5-slideTitle light">UX & Design</h4>
 <!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
             <div class="section-5-slideSocial">
                 <ul>
@@ -310,7 +310,7 @@
             <span></span>
         </div>
         <h4 class="section-5-slideName">Chris Overs</h4>
-        <h4 class="section-5-slideTitle">Legal & Compliance</h4>
+        <h4 class="section-5-slideTitle light">Legal & Compliance</h4>
 <!--         <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
         <div class="section-5-slideSocial">
             <ul>
@@ -330,7 +330,20 @@
 
 <div class="teamChatWrap white">
     <div class="sectionContainer">
-        <div class="row">
+    <div class="keepUpdated white">
+        <h3 class="sectionHead">Keep Updated</h3>
+        <form>
+            <div class="row">
+                <div class="col-md-8">
+                    <input type="email" name="" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
+                </div>
+                <div class="col-md-4">
+                    <input type="submit" value="Get Updates" class="UpdatesSubmit btn_trans hover_ease_2" />
+                </div>
+            </div>
+        </form>
+    </div>
+<!--         <div class="row">
             <div class="col-md-5">
                 <h3 class="sectionHead">What to have a Chat?</h3>
             </div>
@@ -340,9 +353,11 @@
                     <button class="btn_trans hover_ease_2">TELEGRAM</button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
+
+
 
 
 
@@ -372,8 +387,8 @@
                         <div class="footSection">
                             <h4 class="footHead">Company</h4>
                             <ul>
-                                <li><a class="hover_ease_2" href="">Privacy Policy</a></li>
-                                <li><a class="hover_ease_2" href="">Terms of Use</a></li>
+                                <li><a class="hover_ease_2" target="_blank" href="./privacy-policy.html">Privacy Policy</a></li>
+                                <li><a class="hover_ease_2" target="_blank" href="./terms-of-use.html">Terms of Use</a></li>
                             </ul>
                         </div>
                     </div>
