--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -26,7 +26,7 @@
 
 <div class="copyHero">
 
-    <div class="sectionContainer">
+    <div class="container">
 
         <!-- Header Nav -->
 
@@ -143,13 +143,10 @@
 </section>
 
 <footer class="blueBG white">
-    <div class="sectionContainer">
-        <div class="row">
-            <div class="col-md-9">
-
+    <div class="container">
                 <div class="row">
                     <div class="col-md-3">
-                        <div class="footerLogo">
+                        <div class="footerLogo footSection">
                             <img class="logo mb-3" src="images/logo_white.svg" alt="Footer Logo" />
                             <br>
                             <a class="hover_ease_2" href="tel:78615792982">ABN: 78 615 792 982</a>
@@ -158,7 +155,7 @@
                     <div class="col-md-3">
                         <div class="footSection">
                             <h4 class="footHead">Address</h4>
-                            <p>Level 4, 11 York St</p>
+                            <p>Level 5, 11 York St</p>
                             <p>Sydney</p>
                             <p>NSW, Australia</p>
                             <p>1300 PICNIC</p>
@@ -185,12 +182,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-
-            </div>
-        </div>
-
     </div>
 </footer>
 
