Minor Design Changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h1>Insurance with heart</h1>
             <h2 class="light">Share in the profits and have your say at an insurer that's owned by you</h2>
             <div class="heroSectionBtns">
-                <a href="#learn-more-anchor"><button class="hover_ease_2 heroLearnMore white">Show Me More</button></a>
+                <a href="#learn-more-anchor" class="hover_ease_2 heroLearnMore white">Show Me More</a>
                 <!-- <button class="hover_ease_5 heroSubscribe white ">Subscribe</button> -->
             </div>
         </div>
@@ -671,7 +671,7 @@
                         <form>
                             <div class="row">
                                 <div class="col-md-8">
-                                    <input type="email" name="" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
+                                    <input type="email" name="email" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
                                 </div>
                                 <div class="col-md-4">
                                     <input type="submit" value="Get Updates" class="UpdatesSubmit btn_trans hover_ease_2" />
@@ -695,7 +695,7 @@
         <form>
             <div class="row">
                 <div class="col-md-8">
-                    <input type="email" name="" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
+                    <input type="email" name="email" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
                 </div>
                 <div class="col-md-4">
                     <input type="submit" value="Get Updates" class="UpdatesSubmit btn_trans hover_ease_2" />
