--- a/team.html
+++ b/team.html
@@ -281,7 +281,7 @@
         <form>
             <div class="row">
                 <div class="col-md-8">
-                    <input type="email" name="" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
+                    <input type="email" name="email" placeholder="EMAIL ADDRESS" class="UpdatesEmail" />
                 </div>
                 <div class="col-md-4">
                     <input type="submit" value="Get Updates" class="UpdatesSubmit btn_trans hover_ease_2" />
